--- a/Ux.css
+++ b/Ux.css
@@ -24,10 +24,21 @@
   }
     
   .navbar {
-    background-color: #11172A !important;
+    background-color: #FAF8F5 !important;
     width: 100dvw;
   }
-  
+
+  /* Ensure offcanvas doesn't affect navbar on desktop */
+  @media (min-width: 992px) {
+    .offcanvas-body {
+      background-color: transparent !important;
+    }
+
+    .nav-link {
+      color: #11172A !important;
+    }
+  }
+
   .logo {
     margin-left: 2rem;
     max-width: 150px;
@@ -66,7 +77,8 @@
   }
 
   .nav-link.active {
-    border-bottom: 2px solid var(--text);
+    border-bottom: 2px solid var(--elem2);
+    color: var(--bground) !important;
   }
   
   .offcanvas-body {
@@ -75,12 +87,12 @@
   }
   
   .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='%23F9F8F3' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='%2311172A' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
   }
 
   .navbar-toggler {
-    border-color: #F9F8F3;
-    color: #F9F8F3;
+    border-color: #11172A;
+    color: #11172A;
   }
   
   .offcanvas-header {
@@ -403,12 +415,12 @@
 @media screen and (min-width: 1026px) and (max-width: 1440px) {
 
     .navbar {
-      background-color: #11172A !important;
+      background-color: #FAF8F5 !important;
       height: 15dvh;
     }
 
     .offcanvas-body {
-      background-color: #11172A !important;
+      background-color: transparent !important;
     }
 
   .container {
@@ -843,14 +855,14 @@
 /* large media */
 
 @media screen and (min-width: 1600px) {
-  
-  
+
+
   .navbar {
-    background-color: #11172A !important;
+    background-color: #FAF8F5 !important;
   }
 
   .offcanvas-body {
-    background-color: #11172A !important;
+    background-color: transparent !important;
   }
 
   .container {
